@@ -47,6 +47,7 @@ language_not_found=Sprache "{0}" konnte nicht gefunden werden.
 auth_login_failed=Login fehlgeschlagen.
 auth_login_succeeded=Login erfolgreich.
 auth_login_password_change_required=Eine Passwortänderung ist erforderlich. Die Eigenschaft "newPassword" muss gesetzt sein.
+auth_login_newpassword_failed=Das neue Passwort kann nicht gesetzt werden da keine Passwort Änderung angefordert wurde.
 
 object_not_found_for_uuid=Objekt mit uuid "{0}" konnte nicht gefunden werden.
 object_not_found_for_name=Objekt mit name "{0}" konnte nicht gefunden werden.
