@@ -47,6 +47,7 @@ language_not_found=Language "{0}" could not be found.
 auth_login_failed=Login failed.
 auth_login_succeeded=Login succeeded.
 auth_login_password_change_required=A password change is required. Provide the "newPassword" property in your login request.
+auth_login_newpassword_failed=The newPassword can\'t be set because no forced password change was requested.
 
 object_not_found_for_uuid=Object with uuid "{0}" could not be found.
 object_not_found_for_name=Object with name "{0}" could not be found.
